#12 Auction improve
- Information about the auction is given dynamically, only the requested fields
- The module structure has been changed
- Changed the tests
