# auction-service/src/main/java/van/karm/auction/infrastructure/enricher/AuctionFieldEnricher.java
@@ -1,0 +1,9 @@
+package van.karm.auction.infrastructure.enricher;
+
+import java.util.Map;
+import java.util.Set;
+import java.util.UUID;
+
+public interface AuctionFieldEnricher {
+    void enrich(Map<String, Object> fieldsMap, Boolean isPrivate, Set<String> requestedFields, UUID auctionId);
+}
