# auction-service/src/main/java/van/karm/auction/presentation/dto/exception/ApiError.java
@@ -1,0 +1,11 @@
+package van.karm.auction.presentation.dto.exception;
+
+import java.time.Instant;
+
+public record ApiError(
+        int status,
+        String error,
+        String message,
+        String path,
+        Instant timestamp
+) {}
